Update Proof.java